Bug 482696 ConvertAndSanitizeFileName does not need to call NS_CopyUnicodeToNative r=Standard8 sr=bienvenu